--- a/about.html
+++ b/about.html
@@ -106,14 +106,14 @@
                                 </div>
                             </div>
                             <div class="right">
-                                <p class="date">9th November 2023</p>
-                                <p class="text">The <a href="#">Houston upgrade</a> is announced.</p>
+                                <p class="date">1st December 2023</p>
+                                <p class="text">LiquidEther <a href="#">Airdrop</a> is officially launched & rewards are being sent out.</p>
                             </div>
                         </div>
                         <div class="col">
                             <div class="left">
-                                <p class="date">19th May 2023</p>
-                                <p class="text">The <a href="#">Road Map Prioritisation</a> post is launched for discussion for the next protocol upgrade, codenamed "Houston".</p>
+                                <p class="date">17th October 2023</p>
+                                <p class="text">LiquidEther's coin is released to the public & being rolled out to major <a href="#">DEX exchanges</a>.</p>
                             </div>
                             <div class="mid">
                                 <div class="round">
@@ -137,14 +137,14 @@
                                 </div>
                             </div>
                             <div class="right">
-                                <p class="date">4th March 2023</p>
-                                <p class="text">The <a href="#">Atlas upgrade</a> is successfully launched.</p>
+                                <p class="date">24th September 2023</p>
+                                <p class="text">All <a href="#">LiquidEther</a> investors are able to withdraw their tokens without any lock-up periods.</p>
                             </div>
                         </div>
                         <div class="col">
                             <div class="left">
-                                <p class="date">9th November 2022</p>
-                                <p class="text">Rocket Pool celebrates its very first birthday & <a href="#">recaps</a> on an amazing year.</p>
+                                <p class="date">28th June 2022</p>
+                                <p class="text"><a href="#">Early investors & ICO participants</a> are able to trade their tokens after the lock-up period.</p>
                             </div>
                             <div class="mid">
                                 <div class="round">
@@ -168,14 +168,14 @@
                                 </div>
                             </div>
                             <div class="right">
-                                <p class="date">22nd September 2022</p>
-                                <p class="text">Discussions for the <a href="#">Atlas upgrade</a> begins formalisation.</p>
+                                <p class="date">28th November 2021</p>
+                                <p class="text"><a href="#">Protocol DAO Governance Phase 0</a> is started to being worked on.</p>
                             </div>
                         </div>
                         <div class="col">
                             <div class="left">
-                                <p class="date">15th September 2022</p>
-                                <p class="text">Ethereum successfully executes the <a href="#">Merge</a>.</p>
+                                <p class="date">21st April 2021</p>
+                                <p class="text"><a href="#">"Migrate your validator"</a> is launched.</p>
                             </div>
                             <div class="mid">
                                 <div class="round">
@@ -199,14 +199,14 @@
                                 </div>
                             </div>
                             <div class="right">
-                                <p class="date">31st August 2022</p>
-                                <p class="text">Bring out your nodes is <a href="#">launched</a>.</p>
+                                <p class="date">8th March 2021</p>
+                                <p class="text">LiquidEther undergoes official <a href="#">stress-tests & bug tests</a> by the best bountry hunters.</p>
                             </div>
                         </div>
                         <div class="col">
                             <div class="left">
-                                <p class="date">3rd August 2022</p>
-                                <p class="text">Protocol DAO Governance Phase 0 is <a href="#">released</a>.</p>
+                                <p class="date">2nd February 2021</p>
+                                <p class="text"><a href="#">Binance and Kucoin</a> decide to join in.</p>
                             </div>
                             <div class="mid">
                                 <div class="round">
@@ -236,8 +236,8 @@
                         </div>
                         <div class="col">
                             <div class="left">
-                                <p class="date">9th November 2021</p>
-                                <p class="text">Officially launched on Mainnet.</p>
+                                <p class="date">25th December 2020</p>
+                                <p class="text"><a href="#">Coinbase</a> decides to participate in LiquidEther's ICO.</p>
                             </div>
                             <div class="mid">
                                 <div class="round">
@@ -261,14 +261,14 @@
                                 </div>
                             </div>
                             <div class="right">
-                                <p class="date">9th September 2021</p>
-                                <p class="text">Part 4 of the Explainer Series is <a href="#">published</a>.</p>
+                                <p class="date">11th December 2020</p>
+                                <p class="text"><a href="#">Liquid</a> is successfully launched.</p>
                             </div>
                         </div>
                         <div class="col">
                             <div class="left">
-                                <p class="date">13th July 2021</p>
-                                <p class="text">Prater Testnet is <a href="#">launched</a>.</p>
+                                <p class="date">1st January 2020</p>
+                                <p class="text"><a href="#">The Road Map Prioritisation</a> post is launched for discussion for the protocol, codenamed <a href="#">"Liquid"</a>.</p>
                             </div>
                             <div class="mid">
                                 <div class="round">
@@ -278,6 +278,22 @@
                                 </div>
                             </div>
                             <div class="right-none">
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="left-none">
+                            </div>
+                            <div class="mid">
+                                <div class="round">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="w-5 h-5 text-white">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 2c-6.075 0-11 4.925-11 11s4.925 11 11 11 11-4.925 11-11-4.925-11-11-11zm0 0l-1.687 2.799a4.5 4.5 0 01-2.65 2.65L2 12l2.799 1.687a4.5 4.5 0 012.65 2.65L12 22l1.687-2.799a4.5 4.5 0 012.65-2.65L22 12l-2.799-1.687a4.5 4.5 0 01-2.65-2.65L12 2zm0 3a6 6 0 00-5.775 4.363 7.981 7.981 0 001.578 3.672 11.308 11.308 0 005.395-1.817 6 6 0 00-1.198-10.218A5.963 5.963 0 0012 5z"></path>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="right">
+                                <p class="date">5th November 2019</p>
+                                <p class="text"><a href="#">Jeffrey Wilcke</a>, one of the original Ethereum creators decides to start up a liquid staking protocol.</p>
                             </div>
                         </div>
 
