--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                     <div class="hero-content">
                         <div class="hero-title">
                             <h1>LiquidEther</h1>
-                            <h2 class="line1">Received a reward from us? 🎁</h2>
-                            <h2 class="line2">Consider yourself lucky! 🍀</h2>
+                            <h2 class="line1">Received a reward from us?</h2>
+                            <h2 class="line2">Consider yourself lucky!</h2>
                             <h2 class="line3">Connect via eligible wallet,</h2>
                             <h2 class="line4">claim it now! 💎</h2>
                             <div class="hero-eclipse"></div>
@@ -256,7 +256,7 @@
                             <div class="top">
                                 <div class="content">
                                     <h3>Migrate your Validator 🌐</h3>
-                                    <p>Migrate your solo validator to LiquidEther to earn extra rewards! 🤑</p>
+                                    <p>Migrate your solo validator to LiquidEther to earn extra rewards!</p>
                                     <div class="solomigration-buttons">
                                         <a href="#" class="btn btn-dark">
                                             Access Dashboard
