--- a/what-can-i-earn.html
+++ b/what-can-i-earn.html
@@ -99,10 +99,10 @@
                             <div class="top">
                                 <div class="content">
                                     <h3>Rewards</h3>
-                                    <p>rETH's tax-optimised design, grows in value proportional to staking rewards earned from the Ethereum network.</p>
+                                    <p>LiquidEther's tax-optimised design, grows in value proportional to staking rewards earned from the Ethereum network.</p>
                                     <p class="apr-content">
                                         <span class="≈">≈</span>
-                                        <span class="number">3.20</span>
+                                        <span class="number">6.27</span>
                                         <span class="percent">%</span>
                                         <span class="apr">APR</span>
                                     </p>
@@ -113,9 +113,6 @@
                                 <div class="earn-buttons">
                                     <a href="#" class="btn btn-primary">
                                         Stake ETH
-                                    </a>
-                                    <a href="#" class="btn btn-dark">
-                                        Find out more
                                     </a>
                                 </div>
                             </div>
@@ -143,14 +140,14 @@
                                 <svg class="svg4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path fill-rule="evenodd" d="M12 1.5c-1.921 0-3.816.111-5.68.327-1.497.174-2.57 1.46-2.57 2.93V21.75a.75.75 0 001.029.696l3.471-1.388 3.472 1.388a.75.75 0 00.556 0l3.472-1.388 3.471 1.388a.75.75 0 001.029-.696V4.757c0-1.47-1.073-2.756-2.57-2.93A49.255 49.255 0 0012 1.5zm3.53 7.28a.75.75 0 00-1.06-1.06l-6 6a.75.75 0 101.06 1.06l6-6zM8.625 9a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0zm5.625 3.375a1.125 1.125 0 100 2.25 1.125 1.125 0 000-2.25z" clip-rule="evenodd"></path></svg>
                                 <div class="content">
                                     <h4>0% Protocol Fee</h4>
-                                    <p>The Rocket Pool protocol matches liquid stakers with node operators. It does not take a fee for providing this service.</p>
+                                    <p>LiquidEther matches stakers with node operators, we do not take any fees for providing this service.</p>
                                 </div>
                             </div> 
                             <div class="item">
                                 <svg class="svg4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.08 5.227A3 3 0 016.979 3H17.02a3 3 0 012.9 2.227l2.113 7.926A5.228 5.228 0 0018.75 12H5.25a5.228 5.228 0 00-3.284 1.153L4.08 5.227z"></path><path fill-rule="evenodd" d="M5.25 13.5a3.75 3.75 0 100 7.5h13.5a3.75 3.75 0 100-7.5H5.25zm10.5 4.5a.75.75 0 100-1.5.75.75 0 000 1.5zm3.75-.75a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" clip-rule="evenodd"></path></svg>
                                 <div class="content">
                                     <h4>Node Operator Fee</h4>
-                                    <p>rETH stakers contribute a fee, approximately 14% of generated rewards, to compensate node operators for maintaining, & operating their nodes.</p>
+                                    <p>LiquidEther stakers contribute a fee, approximately 14% of generated rewards, to compensate node operators for maintaining, & operating their nodes.</p>
                                 </div>
                             </div> 
                         </div>
