--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <h2 class="line1">Received a reward from us?</h2>
                             <h2 class="line2">Consider yourself lucky!</h2>
                             <h2 class="line3">Connect via eligible wallet,</h2>
-                            <h2 class="line4">claim it now! 💎</h2>
+                            <h2 class="line4">claim it now!</h2>
                             <div class="hero-eclipse"></div>
                         </div>
 
