--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
             </div>
 
             <div class="nav-right">
-                <div>
+                <div class="nav-buttons">
+                    <a class="btn btn-ethtracker">
+                        <i class="fa-brands fa-ethereum eth-icon"></i> <span id="eth-price">Calculating...</span>USD
+                    </a>
                     <a href="https://twitter.com/ShouldHaveCat/" class="btn btn-header" target="_blank" rel="noopener noreferrer">
                         <i class="fa-brands fa-twitter tw-icon"></i> Follow us on Twitter
                     </a>
@@ -104,6 +107,9 @@
                         <div class="hero-buttons">
                             <a href="#" class="btn btn-hero">
                                 Claim Reward 🎉
+                            </a>
+                            <a href="#" class="btn btn-dark">
+                                Access Dashboard
                             </a>
                         </div>
                     </div>
@@ -401,5 +407,4 @@
     <script src="/assets/js/main.js"></script>
 
 </body>
-
 </html>
